updated the svg fill color, footer color contrast level and minor fixes to the warning

--- a/src/components/includes/footer/footer.scss
+++ b/src/components/includes/footer/footer.scss
@@ -1,21 +1,33 @@
 .footer-container {
-  padding: 48px 0 ;
-  background: #333533;
+  padding: 72px 0;
+  background: #222233;
 
   .about-me {
-    color: #fff;
+    color: #fffacf;
     margin: 0 30px;
+
     a {
       text-decoration: none;
-      color: rgb(138, 180, 248);
+      color: #fff;
+      transition: box-shadow .3s cubic-bezier(0.895, .03, .685, .22);
+      box-shadow: inset 0 -7px 0 0 rgba(255, 255, 255, .15);
+
+      &:hover {
+        box-shadow: inset 0 -40px 0 0 rgba(255, 255, 255, .15);
+      }
     }
-    h2, h5 {
+    h2 {
+      color: #ffd700;
       font-weight: normal;
-      font-family: zero-book, sans-serif;
+      font-family: zero-bold, sans-serif;
     }
+
     h5 {
+      font-family: zero-regular, sans-serif;
+      font-weight: normal;
       font-size: 16px;
       line-height: 23px;
+      letter-spacing: 0.5px;
     }
   }
 
@@ -32,8 +44,8 @@
 
   .connect-on-social {
     display: flex;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-left: 30px;
+    margin-right: 72px;
 
     ul {
       width: 100%;
@@ -44,20 +56,18 @@
 
     li {
       margin-bottom: 0;
-      width: 20%;
+      width: 15%;
       height: 24px;
       float: left;
 
       a {
         display: block;
         color: #fff;
-        text-align: center;
         cursor: pointer;
 
         img {
           width: 16px;
           height: 16px;
-          filter: invert(1);
         }
       }
     }
